Added images, scrript

--- a/pass.html
+++ b/pass.html
@@ -9,33 +9,58 @@
 <h2>Getting input</h2>
 
 <form>
-    <label for="form1_age">What is your age </label>
-    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <label for="form_phrase">Enter the Secret phrase </label>
+    <input type="password" id="form_phrase" name="form_phrase" value="Let me in">
+    <br>
+    <label for="form_test">Enter a phrase</label>
+    <input type="text" id="form_test" name="form_test" autofocus> <br>
 
-    <label for="form1_nick">What is your nickname </label>
-    <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
+    <input type="button" onclick="processPhrase()" value="Check the phrase"id="processButton" class="btn btn-primary">
 
-    <input type="button" onclick="resolveForm()" value="Get values from form">
 </form>
 
 
 <p id="result">This text will be replaced </p>
+<br>
+<img src="images/Ostrich.jpeg" class="img-thumbnail" alt="Ostrich" onclick="newImage();" id="images" style="width: 200; height: 200;">
 
 <script> 
+correct = 0
+        wrong = 0
+        count=0
+      
+        function processPhrase() {
+            console.log("Getting form values")
+            secret = document.getElementById("form_phrase").value
+            guess = document.getElementById("form_test").value
+            if (secret == guess) {
+                correct = correct + 1
+                alert("Access allowed")
+            } else {
+                wrong = wrong + 1
+                alert("Access denied")
+            }
 
-function resolveForm (){
-    console.log("Getting form values")
-    age = document.getElementById("form1_age").value
-    nick = document.getElementById("form1_nick").value
-    confirmed = confirm("Are these the values? "+age+" and "+nick)
-    
-    out = document.getElementById("result")
-    if(confirmed){
-        out.innerHTML = "Values were confirmed"
-    } else {
-        out.innerHTML = "Values were not confirmed"
-    }
-}
+            out = document.getElementById("result")
+            out.innerHTML = "Correct Count: " + correct + " ,Wrong Count: " + wrong
+
+        }
+        function newImage(){
+            switch(count){
+                case 0 :
+                    document.getElementById("images").src="images/owl.jpg"
+                    count = count+1
+                    break;
+                case 1 :
+                    document.getElementById("images").src="images/peacock.jpg"
+                    count = count+1
+                    break;
+                case 2 :
+                    document.getElementById("images").src="images/Ostrich.jpg"
+                    count = 0
+                    break;                    
+            }
+        }
 </script>
 
 </body>
