--- a/pass.html
+++ b/pass.html
@@ -2,6 +2,30 @@
 <html>
  <head>
      <title>catch a ride</title>
+     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+        <style>
+            header{
+                color: blueviolet;
+                background-color: yellowgreen;
+            }
+            h2{
+                background-color: orangered;
+                color: peru;
+            }
+            p{
+                color: skyblue;
+            }
+        </style>
  </head>
 <body>
     <header>Pass phrase by SrinadhPonugoti</header>
@@ -9,12 +33,15 @@
 <h2>Getting input</h2>
 
 <form>
+    <div class="form-group" style="width: 25%;">
     <label for="form_phrase">Enter the Secret phrase </label>
     <input type="password" id="form_phrase" name="form_phrase" value="Let me in">
+    </div>
     <br>
+    <div class="form-group" style="width: 25%;">
     <label for="form_test">Enter a phrase</label>
     <input type="text" id="form_test" name="form_test" autofocus> <br>
-
+</div>
     <input type="button" onclick="processPhrase()" value="Check the phrase"id="processButton" class="btn btn-primary">
 
 </form>
@@ -39,12 +66,19 @@ correct = 0
             } else {
                 wrong = wrong + 1
                 alert("Access denied")
+                wrong = wrong + 1
+                alert("Access denied")
+                if(wrong >= 2){
+                document.getElementById("processButton").onclick=function(){alert("Account Locked")}
+                }	
+            }
+            out = document.getElementById("result")
             }
 
             out = document.getElementById("result")
             out.innerHTML = "Correct Count: " + correct + " ,Wrong Count: " + wrong
 
-        }
+        
         function newImage(){
             switch(count){
                 case 0 :
