--- a/arithmetic.html
+++ b/arithmetic.html
@@ -14,20 +14,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-        <style>
-            header{
-                color: blueviolet;
-                background-color: yellowgreen;
-            }
-            h2{
-                background-color: orangered;
-                color: peru;
-            }
-            p{
-                color: skyblue;
-            }
-        </style>
-        
+    <style>
+        header {
+            color: maroon;
+            background-color: yellowgreen;
+        }
+
+        h2 {
+            background-color: lightgreen;
+            color: red
+        }
+
+        p {
+            color: crimson;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -36,14 +38,14 @@
 
     <form>
         <div class="form-group" style="width: 25%;">
-        <label for="form_base" class="form-label">Enter a base </label>
-        <input type="number" class="form-control" id="form_base" name="form_base" value=10> <br>
-    </div>
-        <div class="form-group" style="width: 25%;">
-        <label for="form_exponent" class="form-label">Enter an exponent </label>
-        <input type="number" class="form-control" id="form_exponent" name="form_exponent" value=2> <br>
+            <label for="form_base" class="form-label">Enter a base </label>
+            <input type="number" class="form-control" id="form_base" name="form_base" value=10> <br>
         </div>
-        <input type="button" class="btn btn-primary" onclick="powers()" value="Compute" >
+        <div class="form-group" style="width: 25%;">
+            <label for="form_exponent" class="form-label">Enter an exponent </label>
+            <input type="number" class="form-control" id="form_exponent" name="form_exponent" value=2> <br>
+        </div>
+        <input type="button" class="btn btn-primary" onclick="powers()" value="Compute">
     </form>
 
 
@@ -52,23 +54,27 @@
 
     <form>
         <div class="form-check">
-        <input type="radio" class="form-check-input" id="rg1_plus" name="operators" value="plus" onclick="processRadio()">
-        <label for="rg1_plus" class="form-check-label">+</label></br>
+            <input type="radio" class="form-check-input" id="rg1_plus" name="operators" value="plus"
+                onclick="processRadio()">
+            <label for="rg1_plus" class="form-check-label">+</label></br>
         </div>
 
         <div class="form-check">
-        <input type="radio" class="form-check-input"id="rg1_minus" name="operators" value="minus" onclick="processRadio()">
-        <label for="rg1_minus" class="form-check-label">-</label></br>
-      </div>
+            <input type="radio" class="form-check-input" id="rg1_minus" name="operators" value="minus"
+                onclick="processRadio()">
+            <label for="rg1_minus" class="form-check-label">-</label></br>
+        </div>
 
         <div class="form-check">
-        <input type="radio" class="form-check-input" id="rg1_times" name="operators" value="times" onclick="processRadio()">
-        <label for="rg1_times" class="form-check-label">*</label></br>
-      </div>
+            <input type="radio" class="form-check-input" id="rg1_times" name="operators" value="times"
+                onclick="processRadio()">
+            <label for="rg1_times" class="form-check-label">*</label></br>
+        </div>
         <div class="form-check">
-        <input type="radio" class="form-check-input" id="rg1_divide  " name="operators" value="divide" onclick="processRadio()">
-        <label for="rg1_divide" class="form-check-label">/</label></br>
-     </div>
+            <input type="radio" class="form-check-input" id="rg1_divide  " name="operators" value="divide"
+                onclick="processRadio()">
+            <label for="rg1_divide" class="form-check-label">/</label></br>
+        </div>
     </form>
     <br>
     <p id="left">This text will be replaced </p>
@@ -92,16 +98,16 @@
 
         }
         function processRadio() {
-            base =parseInt(document.getElementById("form_base").value)
+            base = parseInt(document.getElementById("form_base").value)
             exponent = parseInt(document.getElementById("form_exponent").value)
             operation = document.getElementsByName("operators")
             sign = ""
-            for(i=0;i<operation.length;i++){
-                if(operation[i].checked){
+            for (i = 0; i < operation.length; i++) {
+                if (operation[i].checked) {
                     sign = operation[i].value
                 }
             }
-            
+
             var a = 0
             switch (sign) {
                 case "plus":
@@ -118,7 +124,7 @@
                     break;
             }
             get = document.getElementById("left")
-            get.innerHTML = "Values of "+base + " "+sign+" "+exponent+": "+a
+            get.innerHTML = "Values of " + base + " " + sign + " " + exponent + ": " + a
         }
     </script>
 
